# BombermanOnline

./: .gitignore  README.md  README_RU.md  docker-compose.yml  example.md  package-lock.json  package.json  pyproject.toml
services/ai-service/: .env-example  Dockerfile  README.md  README_RU.md  docker-entrypoint.sh  pyproject.toml  pytest.ini
services/ai-service/app/: config.py  dependencies.py  fastapi_dependencies.py  logging_config.py  main.py  nats_controller.py
services/ai-service/app/agents/: base_agent.py  bomberman_ai_agent.py  enemy_ai_agent.py
services/ai-service/app/ai_env/: bomberman_env.py
services/ai-service/app/entities/: game_state_representation.py
services/ai-service/app/environment/: bomberman_env.py
services/ai-service/app/inference/: inference_service.py
services/ai-service/app/models/: training.py
services/ai-service/app/registry/: ai_agent_registry.py
services/ai-service/app/repositories/: nats_repository.py  redis_repository.py
services/ai-service/app/routes/: training.py
services/ai-service/app/services/: game_service_finder.py  grpc_client.py  grpc_server.py  inference_service.py  trainer.py  trainer_enemy_service.py  trainer_player_service.py  trainer_service.py
services/ai-service/app/training/: cnn_feature_extractor.py  model_manager.py  render_callback.py  trainer.py  training_metrics_callback.py
services/ai-service/docs/en/: ai_training.md  configuration.md  deployment.md  interaction.md  packages.md  project_structure.md
services/ai-service/docs/ru/: ai_training.md  cnn_architecture.md  configuration.md  deployment.md  interaction.md  packages.md  project_structure.md
services/ai-service/postman/: ai-service-rest.postman_collection.json  ai-service.postman_environment.json
services/ai-service/tests/: conftest.py
services/ai-service/tests/integration/: test_grpc_inference.py
services/ai-service/tests/unit/: test_bomberman_env.py  test_grpc_client.py  test_grpc_server.py  test_inference_service.py
services/auth-service/: .env-example  Dockerfile  README.md  README_RU.md  docker-entrypoint.sh  pyproject.toml
services/auth-service/app/: __init__.py  alembic.ini  config.py  database.py  dependencies.py  logging_config.py  main.py  redis_client.py
services/auth-service/app/alembic/: env.py
services/auth-service/app/models/: __init__.py  token.py  user.py
services/auth-service/app/routes/: __init__.py  api.py  auth.py  frontend.py  root.py
services/auth-service/app/scripts/: __init__.py  apply_migrations.py  create_migration.py  rollback_migrations.py  show_migrations.py
services/auth-service/app/services/: __init__.py  auth.py  oauth_service.py  token_service.py  user_service.py
services/auth-service/app/templates/: confirm_reset_password.html  dashboard.html  email_verify.html  error.html  layout.html  login.html  profile_edit.html  register.html  reset_password.html
services/auth-service/docs/en/: 01_overview.md  02_technologies.md  03_deployment.md  04_configuration.md  05_api_endpoints.md  06_database.md  07_migrations.md  08_architecture.md
services/auth-service/docs/ru/: 01_overview.md  02_technologies.md  03_deployment.md  04_configuration.md  05_api_endpoints.md  06_database.md  07_migrations.md  08_architecture.md
services/game-allocator-service/: .env-example  Dockerfile  README.md  README_RU.md  docker-entrypoint.sh  pyproject.toml  pytest.ini
services/game-allocator-service/app/: config.py  game_cache.py  load_balancer.py  logging_config.py  main.py  nats_repository.py  redis_repository.py
services/game-allocator-service/tests/: .coverage  README.md  README_RU.md  __init__.py  conftest.py  test_config.py  test_game_allocator_service.py  test_game_cache.py  test_integration.py  test_load_balancer.py  test_logging_config.py  test_main.py  test_nats_repository.py  test_redis_repository.py
services/game-service/: .env-example  Dockerfile  README.md  README_RU.md  alembic.ini  docker-entrypoint.sh  game-service.md  pyproject.toml
services/game-service/app/: alembic.ini  auth.py  config.py  dependenties.py  grpc_server.py  logging_config.py  main.py  manage.py
services/game-service/app/alembic/: __init__.py  env.py
services/game-service/app/coordinators/: game_coordinator.py  game_coorditanor.py  training_coordinator.py
services/game-service/app/entities/: __init__.py  bomb.py  bomberman.py  bullet.py  cell_type.py  enemy.py  entity.py  game_mode.py  game_mode_class_name.py  game_settings.py  game_status.py  inputs.py  map.py  mine.py  player.py  power_up.py  tank.py  team.py  unit_type.py  weapon.py
services/game-service/app/models/: game_create_models.py  game_models.py  map_models.py  team_models.py
services/game-service/app/repositories/: __init__.py  map_repository.py  nats_repository.py  postgres_repository.py  redis_repository.py
services/game-service/app/routes/: entity_routes.py  game_routes.py  map_routes.py  team_routes.py
services/game-service/app/services/: ai_action_mapper.py  ai_inference_service.py  ai_observation.py  event_service.py  game_manager.py  game_mode_service.py  game_service.py  map_service.py  nats_service.py  team_service.py
services/game-service/app/shared/: proto
services/game-service/docs/: api_endpoints.md  architecture.md  introduction.md  nats_architecture.md  nats_events.md  player_commands_and_actions.md  setup.md  teams_logic.md
services/game-service/docs/architecture/: entities.md  models.md  overview.md  services.md
services/game-service/docs/diagrams/: class_diagram.md  nats_game_input_sequence_diagram.md
services/game-service/docs/en/: api_endpoints.md  configuration.md  introduction.md  nats_events.md  player_commands_and_actions.md  setup.md  teams_logic.md
services/game-service/docs/ru/: api_endpoints.md  (+6 more)
services/game-service/postman/: game-service-rest.postman_collection.json  game-service.postman_environment.json
services/webapi-service/: .env-example  Dockerfile  README.md  README_RU.md  docker-entrypoint.sh  pyproject.toml
services/webapi-service/app/: config.py  dependencies.py  logging_config.py  main.py
(+240 files in other folders)
