[project]
name = "bomberman-auth-service"
version = "0.1.0"
description = "Authentication service for Bomberman Online"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.13.0",
    "httpx>=0.27.0",
    "redis>=7.2.0",
    "aioprometheus[starlette]>=23.12.0",
    "python-multipart>=0.0.7",
    "email-validator>=2.1.0",
    "python-json-logger>=3.3.0",
    "jinja2>=3.1.0",
    "alembic>=1.13.1",
    "typer>=0.24.0",
    "py-consul>=1.6.0",
]
[dependency-groups]
dev=[
    "ty>=0.0.16",
    "ruff>=0.15.0",
]