[project]
name = "game-allocator-service"
version = "0.1.0"
description = "Game allocator microservice for load balancing"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "asyncio>=3.4.3",
    "nats-py>=2.10.0",
    "numpy>=2.3.0",
    "prometheus-api-client>=0.6.0",
    "py-consul>=1.6.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "python-json-logger>=3.3.0",
    "redis>=6.0.0",
]
