[project]
name = "game-service"
version = "0.1.0"
description = "Bomberman Game Service"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "redis[hiredis]>=6.0.0",
    "redis-dict>=3.2.0",
    "nats-py>=2.10.0",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.1.0",
    "aioprometheus>=23.12.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "starlette-exporter>=0.23.0",
    "numpy>=2.2.0",
    "quantile-python>=1.1",
    "python-json-logger>=3.3.0",
    "typer>=0.16.0",
    "py-consul>=1.6.0",
]
