[project]
name = "webapi-service"
version = "0.1.0"
description = "Bomberman webapi service"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-engineio>=4.12.0",
    "python-socketio>=5.13.0",
    "aiohttp>=3.9.5",
    "pydantic-settings>=2.9.1",
    "redis>=6.0.0",
    "sqlalchemy>=2.0.40",
    "numpy>=2.2.5",
    "nats-py>=2.10.0",
    "python-json-logger>=2.0.7",
    "aioprometheus[starlette]>=23.12.0",
    "httpx>=0.28.1",
    "py-consul>=1.6.0",
]
